# camo-reader

./: .gitignore  Cargo.toml  README.md  build.rs  config.ini
.github/workflows/: build.yml
scripts/: git-commit-push-with-time.sh
src/: CamoReader.csproj  ConfigManager.cs  MainForm.cs  Program.cs  app.manifest  main.rs
