[package]
name = "camo-reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ini = "3.0.0"         # For reading the config.ini file
winit = "0.29.15"     # Core windowing library
egui = "0.27.2"       # For simple text rendering
egui_winit = "0.27.2" # Integrates egui with winit
egui_glow = "0.27.2"  # The OpenGL renderer for egui
glow = "0.13.0"       # OpenGL bindings

# For system-wide features
tray-item = "0.9.0"         # System tray icon
global-hotkey = "0.5.0"     # For F1, Ctrl+F1, etc.
once_cell = "1.19.0"        # For global access to event loop proxy

[profile.release]
strip = true  # Strip debug symbols for a smaller exe
opt-level = "z" # Optimize for size
lto = true      # Link-Time Optimization
codegen-units = 1 # Maximize optimization
panic = "abort"   # Abort on panic for smaller binary

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"