[package]
name = "camo-reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ini = "1.3.0"
winit = "0.29.15"
egui = "0.27.2"
egui-winit = "0.27.2"
egui_glow = "0.27.2"
glow = "0.13.0"

# --- NEW / UPDATED DEPENDENCIES ---
# FIX: Corrected glutin version to 0.32.3
glutin = { version = "0.32.3", features = ["wgl"] } # wgl feature is for Windows
glutin-winit = "0.4.2"
raw-window-handle = "0.6.0"
# --- END NEW ---

# For system-wide features
tray-item = "0.9.0"
global-hotkey = "0.5.0"
once_cell = "1.19.0"

[profile.release]
strip = true  # Strip debug symbols for a smaller exe
opt-level = "z" # Optimize for size
lto = true      # Link-Time Optimization
codegen-units = 1 # Maximize optimization
panic = "abort"   # Abort on panic for smaller binary

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
