[package]
name = "camo-reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.33.0"
global-hotkey = "0.7.0"
configparser = "3.0.0"
log = "0.4.28"
env_logger = "0.11.3"
once_cell = "1.21.3"

[target.'cfg(windows)'.dependencies]
tray-item = "0.10.0"

[target.'cfg(target_os = "linux")'.dependencies]
tray-item = { version = "0.10.0", features = ["ksni"] }

[target.'cfg(not(any(windows, target_os = "linux")))'.dependencies]
tray-item = "0.10.0" # For other platforms like macos

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[build-dependencies]
winres = "0.1"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
